# rust-battery

./: CHANGELOG.md  Cargo.toml  Cross.toml  README.md  deny.toml
.github/: renovate.json5
.github/workflows/: ci.yml  deploy.yml  merge-dependabot.yml  security-audit.yml  zizmor.yml
battery/examples/: lood.rs
battery/src/platform/: traits.rs
battery/src/platform/darwin/: device.rs
battery/src/platform/darwin/iokit/: power_source.rs
examples/: all.rs  oneshot.rs  simple.rs
src/: errors.rs  lib.rs  units.rs
src/platform/: mod.rs  traits.rs
src/platform/darwin/: device.rs  iterator.rs  manager.rs  tests.rs  traits.rs
src/platform/darwin/iokit/: errors.rs  mod.rs  power_source.rs  sys.rs  wrappers.rs
src/platform/freebsd/: acpi.rs  device.rs  iterator.rs  manager.rs
src/platform/linux/: device.rs  iterator.rs  manager.rs
src/platform/linux/sysfs/: fs.rs  source.rs
src/platform/linux/tests/: issue_28.rs  issue_40.rs
src/platform/netbsd/: device.rs  iterator.rs  manager.rs  mod.rs  sysmon.rs  utils.rs
src/platform/termux/: device.rs  iterator.rs  manager.rs  mod.rs  tests.rs
src/platform/windows/: device.rs  iterator.rs  manager.rs
src/platform/windows/ffi/: mod.rs  wrappers.rs
src/platform/windows/ffi/ioctl/: info.rs  mod.rs  query_info.rs  status.rs  wait_status.rs
src/types/: manager.rs  state.rs  technology.rs
