[package]
name = "starship-battery"
version = "0.9.1" # remember to update html_root_url
authors = ["Starship Contributors"]
build = "build.rs"
categories = ["os"]
edition = "2021"
keywords = ["battery", "linux", "macos", "windows", "freebsd"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/starship/rust-battery"
rust-version = "1.69"
description = "Cross-platform information about the notebook batteries"

[features]
config-schema = ["schemars", "serde"]

[dependencies]
cfg-if = "1.0"
num-traits = { version = "0.2.19", default-features = false }
schemars = { version = "0.8.21", optional = true }
serde = { version = "1.0.209", features = ["derive"], optional = true }
uom = { version = "0.36", features = ["autoconvert", "f32", "si"] }

[target.'cfg(target_os = "linux")'.dependencies]
lazycell = "~1.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "^0.2.158"
mach = { version = "^0.4.2", package = "mach2" }
core-foundation = "~0.10.0"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Devices",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Power",
]

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
libc = "~0.2.158"
nix = { version = "~0.29.0", default-features = false, features = ["ioctl"] }

[target.'cfg(target_os = "netbsd")'.dependencies]
libc = "~0.2.158"
nix = { version = "~0.29.0", default-features = false, features = ["ioctl", "mman"] }
plist = "~1.7.0"

[dev-dependencies]
approx = "0.5.1"
tempfile = "^3.12.0"
